@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+26-Aug-2010 Ian MacLennan
+ + Added unit test for JFormRuleEmail
+
 20-Aug-2010 Mark Dexter
 # Fix control_panel0004Test for category formatting changes
 
